[#department-of-veterans-affairs/va-virtual-agent/issues/702] removed scrollbar, increase max-height to 5 buttons, converted height into const

--- a/src/applications/virtual-agent/sass/virtual-agent.scss
+++ b/src/applications/virtual-agent/sass/virtual-agent.scss
@@ -15,10 +15,11 @@
 }
 
 .webchat__suggested-actions__button {
-  width: 86% !important;
+  width: 83% !important;
   margin: 0  0 0 2.9em !important;
 }
 
 .webchat__suggested-actions__stack {
   margin-bottom: 1em !important;
+  overflow-y: hidden !important;
 }
